# dementia_care_assist

./: .gitignore  .pre-commit-config.yaml  DESIGN.md  README.md  architecture_diagram.html  architecture_diagram_local_vs_prod.html  dementia_care.db  dementia_care_coach_kaggle.ipynb  docker-compose.yaml  kaggle_writeup.md  mcp_cloudbuild.yaml  mcp_config.json  scratch_build_logs.txt  threat_model.md
.agents/: AGENTS.md  CONTEXT.md  hooks.json
.agents/scripts/: validate_tool_call.py
.github/workflows/: ci.yml
.semgrep/: rules.yaml
adk-agent-scaffold/: README.md  agents-cli-manifest.yaml  deployment_metadata.json  pyproject.toml
adk-agent-scaffold/app/: agent.py  dementia_care_workflow.py
backend/: .env.example  .env.local  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  mcp_server.py  mock_responses.py  rag.py  schemas.py  vertex_search.py
backend/chroma_db/: chroma.sqlite3
chroma_db/: chroma.sqlite3
common/: config.py  database.py  pyproject.toml  rag.py  vertex_search.py
demo/: GEMINI_PPT_PROMPT.md  SLIDES_OUTLINE.md  VIDEO_SCRIPT.md
docs/: prod-arch.html
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js
mcp_server/: Dockerfile  requirements.txt
scripts/: cleanup_ports.sh  create_patient_datastore.py  create_vertex_datastore.py  deploy_patient_search.sh  deploy_prod.sh  deploy_prod_backend.sh  deploy_prod_frontend.sh  deploy_vertex_search.sh  run_backend.sh  run_frontend.sh  seed_cloud_sql.py  seed_cloud_sql.sh  seed_rag.sh  setup.sh
(+88 files in other folders)
