[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dementia-care-common"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.2.0",
    "psycopg2-binary>=2.9.0",
    "chromadb>=0.4.24",
    "google-genai>=0.1.1",
    "google-auth>=2.29.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["common*"]
